# claude-works

./: .gitignore  LICENSE  README.md  pyproject.toml
claude_works/: __init__.py  __main__.py  config.py  curation.py  discovery.py  models.py  resume.py  server.py  submission.py  tracker.py
tests/: test_config.py  test_curation.py  test_discovery.py  test_models.py  test_submission.py  test_tracker.py
