[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-works"
version = "0.1.0"
description = "An MCP server exposing a fit-first, honesty-enforced job-application pipeline as typed tools for LLM agents."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Andrew Sieg" }]
keywords = ["mcp", "model-context-protocol", "llm", "agents", "job-search", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
claude-works = "claude_works.server:main"

[project.urls]
Homepage = "https://github.com/andrewaws26/claude-works"
Repository = "https://github.com/andrewaws26/claude-works"

[tool.setuptools]
packages = ["claude_works"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q"
testpaths = ["tests"]
